--- a/Readme.adoc
+++ b/Readme.adoc
@@ -165,3 +165,5 @@ Another way to verify that the message was properly processed is to take a
  look at Red Hat JBoss Fuse console via 'http://localhost:8181', The count of messages enqueued and dequeued shoud now show that one message has been taken from 'message.to.rules' and placed into 'message.to.datacenter'.
 
 image:BusinessRulesService/images/testResult.png[]
+
+*--------------------- End of Lab ---------------------*
