--- a/Readme.adoc
+++ b/Readme.adoc
@@ -94,12 +94,13 @@ The rules system is capable of reading the rules from a spreadsheet  and compile
 
 The columns in this table represent the following
 
- * **Alerting Rule** Name of the rule. It is optional field but very useful for debugging
- * **Device Type** Type of device reported by the sensor
- * **Payload** Number-range this rule will need to match with
- * **Result** Action triggered by the rule i.e. changing value to 0 or 1
+ * _Alerting Rule_ Name of the rule. It is optional field but very useful for debugging
+ * _Device Type_ Type of device reported by the sensor
+ * _Payload_ Number-range this rule will need to match with
+ * _Result_ Action triggered by the rule i.e. changing value to 0 or 1
  
-**Open the sample rules spreadsheet: 'DecisionTable.xls'**  
+**Open the sample rules spreadsheet: 'DecisionTable.xls'**
+
 image:BusinessRulesService/images/editRules.png[]
 
 **Create two rules by filling in the following information** 
