--- a/Readme.adoc
+++ b/Readme.adoc
@@ -144,7 +144,6 @@ We will try this service by sending a test message via the *Software Sensor* to 
  2. *Routing Service* will pick it up, transform the message and send it to an AMQP message queue.
  3. *Business Rules Service* will take the transformed message from the queue and will put it in another AMQP message queue, but only if it meets the business rule condition
  
- 
 Enter the following commands in a new terminal
 
  [demo-user@localhost Desktop]$ cd
@@ -169,5 +168,23 @@ Another way to verify that the message was properly processed is to take a
  look at Red Hat JBoss Fuse console via 'http://localhost:8181', The count of messages enqueued and dequeued shoud now show that one message has been taken from 'message.to.rules' and placed into 'message.to.datacenter'.
 
 image:BusinessRulesService/images/testResult.png[]
+
+Now we can use the `Software Sensor` to create a stream
+of sensordata and will observe the effect our Business Rules from has
+on the data.
+
+nter the following commands in a new terminal
+
+ [demo-user@iotlab Desktop]$ cd
+ [demo-user@iotlab ~]$ cd IoT_Summit_Lab/
+ [demo-user@iotlab IoT_Summit_Lab]$ ./runSensor.sh
+
+The decision table can be updated with new rules to filter data i.e. what messages should be sent to the message.to.datacenter queue.
+
+ ** Before the new rules can be applied, the running instance of `Business Rules Service` need to be stopped ( `CTRL-C` in the terminal session running Business Rules Service)
+
+ ** Re-build & start the updated `Business Rules Service` and re-run the sensor
+ 
+*The Intelligent IoT Gateway is now ready to work*
 
 *--------------------- End of Lab ---------------------*
