--- a/Ansible/README.adoc
+++ b/Ansible/README.adoc
@@ -7,7 +7,8 @@ Ansible is an IT automation tool. It can configure systems, deploy software, and
 Ansible’s main goals are simplicity and ease-of-use. It manages machines over the SSH protocol.
 
 == Installation
-$ sudo yum install ansible
+  [user@localhost ~]$ sudo yum install ansible
+
 
 
 
