--- a/Ansible/README.adoc
+++ b/Ansible/README.adoc
@@ -10,7 +10,7 @@ Ansible’s main goals are simplicity and ease-of-use. It manages machines over 
 
   [user@localhost ~]$ sudo yum install ansible
 
-Note: Add epel repo or download the download the rpm from http://fedoraproject.org/wiki/EPEL[epel] 
+_Note: Add epel repo or download the download the rpm from http://fedoraproject.org/wiki/EPEL[epel]_
 
 
 === Requirements
