--- a/Readme.adoc
+++ b/Readme.adoc
@@ -104,18 +104,13 @@ The rules system is capable of reading the rules from a spreadsheet  and compile
 
 The columns in this table represent the following:
 
-| Tables        | Are           | Cool  |
-| ------------- |:-------------:| -----:|
-| col 3 is      | right-aligned | $1600 |
-| col 2 is      | centered      |   $12 |
+_Alerting Rule: Name of the rule. It is optional field but very useful for debugging_
 
+_Device Type: Type of device reported by the sensor_
 
- Field | Description 
- ----- | ----------- 
-| Alerting Rule | Name of the rule. It is optional field but very useful for debugging |
-| Device Type | Type of device reported by the sensor|
-| Payload | Number-range this rule will need to match with |
-| Result | Action triggered by the rule i.e. changing value to 0 or 1 |
+_Payload: Number-range this rule will need to match with_
+
+_Result: Action triggered by the rule i.e. changing value to 0 or 1_
  
  * Open the sample rules spreadsheet: 'DecisionTable.xls'
 
